--- a/main/index.html
+++ b/main/index.html
@@ -7,6 +7,9 @@
 	<title>test js</title>
 </head>
 <body>
+	<form>
+		<input type = "file" name = "upload" accept = "image/*" />
+	</form>
 	<h1>text</h1>
 </body>
 <script src="js/script.js"></script>
