--- a/main/index.html
+++ b/main/index.html
@@ -8,7 +8,24 @@
 	<title>test js</title>
 </head>
 <body>
-<div class="wrapper"></div>
+<div class="wrapper">
+	<header class="header">
+		<div class="header-container -container">
+			<div class="header-item">
+				<a href="" class="header-logo">
+					шапка от протона
+				</a>
+				<ul class="header-item__list">
+					<li class="list-item">1</li>
+					<li class="list-item">2</li>
+					<li class="list-item">3</li>
+				</ul>
+			</div>
+		</div>
+	</header>
+	<main class="main"></main>
+	<footer class="footer"></footer>
+</div>
 </body>
 <script src="js/script.js"></script>
 </html>
