--- a/main/index.html
+++ b/main/index.html
@@ -10,18 +10,25 @@
 <body>
 <div class="wrapper">
 	<header class="header">
-		<div class="header-container -container">
-			<div class="header-item">
-				<a href="" class="header-logo">
-					шапка от протона
-				</a>
-				<ul class="header-item__list">
-					<li class="list-item">1</li>
-					<li class="list-item">2</li>
-					<li class="list-item">3</li>
+		<div class="header__container main-container">
+			<a href="" class="header__logo">шапка от протона</a>
+			<nav class="header__menu menu">
+				<ul class="menu__list">
+					<li class="menu__item">
+						<a href="" class="menu__link">меню 1</a>
+					</li>
+					<li class="menu__item">
+						<a href="" class="menu__link">меню 2</a>
+					</li>
+					<li class="menu__item">
+						<a href="" class="menu__link">меню 3</a>
+					</li>
+					<li class="menu__item">
+						<a href="" class="menu__link">меню 4</a>
+					</li>
 				</ul>
-			</div>
-		</div>
+			</nav>
+	</div>
 	</header>
 	<main class="main"></main>
 	<footer class="footer"></footer>
