--- a/main/index.html
+++ b/main/index.html
@@ -28,9 +28,16 @@
 					</li>
 				</ul>
 			</nav>
+		</div>
 	</div>
 	</header>
-	<main class="main"></main>
+		<main class="main">
+			<div class="main__container main-container">
+			<input type="text" name="time" id="time">
+			<button id="button">Запустить</button>
+			<div id="timer"></div>
+		</div>
+	</main>
 	<footer class="footer"></footer>
 </div>
 </body>
