--- a/main/index.html
+++ b/main/index.html
@@ -29,14 +29,9 @@
 				</ul>
 			</nav>
 		</div>
-	</div>
 	</header>
-		<main class="main">
-			<div class="main__container main-container">
-			<input type="text" name="time" id="time">
-			<button id="button">Запустить</button>
-			<div id="timer"></div>
-		</div>
+	<main class="main">
+		<div class="main-container"></div>
 	</main>
 	<footer class="footer"></footer>
 </div>
