--- a/main/index.html
+++ b/main/index.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Mono&display=swap" rel="stylesheet">
 	<title>test js</title>
 </head>
 <body>
@@ -31,7 +34,9 @@
 		</div>
 	</header>
 	<main class="main">
-		<div class="main-container"></div>
+		<div class="main-container">
+			<h1>prosto zagolovok</h1>
+		</div>
 	</main>
 	<footer class="footer"></footer>
 </div>
