--- a/main/index.html
+++ b/main/index.html
@@ -37,6 +37,16 @@
 		<div class="main-container">
 			<h1>prosto zagolovok</h1>
 		</div>
+		<style>
+			.hide { position:absolute; top:-1px; left:-1px; width:1px; height:1px; }
+		 </style>
+		 
+		 <iframe name="hiddenFrame" class="hide"></iframe>
+		<form method="post" action="form.php" target="hiddenFrame">
+			<input type="text" name="name" id="name">
+			<input type="text" name="Comment" id="Comment">
+			<input type="submit" name="submit_btn" >
+	  </form>
 	</main>
 	<footer class="footer"></footer>
 </div>
