--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<a class="header__a" class="active" href="#home">Главная</a>
 					<a class="header__a" href="#contact">Контакты</a>
 					<a class="header__a" href="#about">О нас</a>
+					<a class="header__a1" href="#about">Зайти в аккаунт</a>
 				</nav>
 			</div>
 		</div>
@@ -35,7 +36,7 @@
 				<div class="pr__container">
 					<div class="pr__mainel">
 						<div class="pr__el1">
-							<div class="prel1__text">about us</div>
+							<div class="prel1__text"> about us</div>
 						</div>
 						<div class="pr__el2">
 							<div class="prel2text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, labore quia minus tempore asperiores recusandae corrupti ad, sit est fugiat perspiciatis inventore ex alias dolor soluta architecto beatae pariatur repudiandae!</div>
